--- a/KuromeKuroKit-WPF/Properties/Strings.ja-JP.resx
+++ b/KuromeKuroKit-WPF/Properties/Strings.ja-JP.resx
@@ -117,19 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lblCSGORootDir_Content" xml:space="preserve">
-    <value>CSGO 資料夾位置</value>
+  <data name="_Word_DisplayLanguage" xml:space="preserve">
+    <value>表示言語</value>
   </data>
-  <data name="_Word_Browse" xml:space="preserve">
-    <value>瀏覽</value>
+  <data name="_Word_Default" xml:space="preserve">
+    <value>デフォルト</value>
   </data>
-  <data name="_Msg_CSGONotFounded" xml:space="preserve">
-    <value>找不到 "csgo.exe"！請選擇正確的位置，否則請取消。</value>
+  <data name="_Language_zh-TW" xml:space="preserve">
+    <value>繫体字中国語 (台湾)</value>
   </data>
-  <data name="_Msg_AnErrorOccurred" xml:space="preserve">
-    <value>不明的錯誤。</value>
+  <data name="_Language_ja-JP" xml:space="preserve">
+    <value>日本語</value>
   </data>
-  <data name="lblPlayerMdlPath_Content" xml:space="preserve">
-    <value>玩家模組位置</value>
+  <data name="_Language_en" xml:space="preserve">
+    <value>英語</value>
+  </data>
+  <data name="_MainWindowsTitle" xml:space="preserve">
+    <value>Kuromekuro Kit</value>
   </data>
 </root>
