--- a/KuromeKuroKit-WPF/Properties/Strings.zh-TW.resx
+++ b/KuromeKuroKit-WPF/Properties/Strings.zh-TW.resx
@@ -118,18 +118,36 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lblCSGORootDir_Content" xml:space="preserve">
-    <value>CSGO's directory</value>
-  </data>
-  <data name="_Msg_AnErrorOccurred" xml:space="preserve">
-    <value>An error occurred.</value>
-  </data>
-  <data name="_Msg_CSGONotFounded" xml:space="preserve">
-    <value>"csgo.exe" not founded! Please locate the valid folder, otherwise cancel the operation.</value>
+    <value>CSGO 資料夾位置</value>
   </data>
   <data name="_Word_Browse" xml:space="preserve">
-    <value>Browse</value>
+    <value>瀏覽</value>
+  </data>
+  <data name="_Msg_CSGONotFounded" xml:space="preserve">
+    <value>找不到 "csgo.exe"！請選擇正確的位置，否則請取消。</value>
+  </data>
+  <data name="_Msg_AnErrorOccurred" xml:space="preserve">
+    <value>不明的錯誤。</value>
   </data>
   <data name="lblPlayerMdlPath_Content" xml:space="preserve">
-    <value>Player Model Path</value>
+    <value>玩家模組位置</value>
+  </data>
+  <data name="_Word_Default" xml:space="preserve">
+    <value>預設</value>
+  </data>
+  <data name="_Word_DisplayLanguage" xml:space="preserve">
+    <value>顯示語言</value>
+  </data>
+  <data name="_Language_zh-TW" xml:space="preserve">
+    <value>繁體中文 (台灣)</value>
+  </data>
+  <data name="_Language_ja-JP" xml:space="preserve">
+    <value>日文</value>
+  </data>
+  <data name="_Language_en" xml:space="preserve">
+    <value>英文</value>
+  </data>
+  <data name="_MainWindowsTitle" xml:space="preserve">
+    <value>Kuromekuro Kit</value>
   </data>
 </root>
